[package]
name = "tonic-balance-channel-with-lazy-connection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3" }
tokio = { version = "1.21.2", features = ["full"] }
tonic = { git = "https://github.com/hyperium/tonic" }
prost = "0.11"

[build-dependencies]
prost-build = "0.11"
tonic-build = { git = "https://github.com/hyperium/tonic", features = ["prost"] }